# rich-input-handlr-cpp

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: bake.yml
cmake/: rich_input_handlrConfig.cmake.in
examples/: CMakeLists.txt  basic.cpp
include/rich_input_handlr/: rich_input_handlr.hpp
